Dare to remove Sencha CMD and Java 11